# Distributed-File-System

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
apps/chunk_server/: .env  Cargo.toml  Dockerfile  project.json
apps/chunk_server/src/: main.rs
apps/master_server/: Cargo.toml  Dockerfile  project.json
apps/master_server/src/: main.rs
apps/webapp/: package-lock.json  package.json
apps/webapp/app/: page.tsx
infrastructure/dev/deployment/: master-deployment.yaml  slave-deployment.yaml
infrastructure/dev/ingress/: master-ingress.yaml  nginx-config.yaml  slave-ingress.yaml
infrastructure/dev/services/: master-service.yaml  slave-service.yaml
libs/: .env  Cargo.toml  build.rs  project.json
libs/src/: db.rs  lib.rs
proto/: master_service.proto  slave_service.proto
templates/: default.conf.template
